--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "تحديث تلقائي (مستحسن)",
   "Automatically check for new versions and notify if a new version is available.": "تحقق تلقائيًا من وجود إصدارات جديدة و أشعرني إذا كان هناك إصدار جديد متاح.",
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "قم بنسخ احتياطي بشكل منتظم وحافظ على مفتاح التشفير آمنة.",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "خلفية",
   "Background Color": "لون الخلفية",
   "Backing up your wallet...": "يتم النسخ الاحتياطي لمحفظتك...",
@@ -45,6 +45,7 @@
   "Backup directory": "مجلد النسخ الإحتياطي",
   "Backup wallet": "نسخ المحفظة احتياطيا",
   "Balance": "رصيد",
+  "Base currency": null,
   "Block Count": "عدد الكتل",
   "Block Weight": "وزن الكتلة",
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": "تصدير الموضوع المخصص",
   "Fake Test Transactions": "معاملات اختبار وهمية",
   "Fee": "تكلفة",
-  "Fiat currency": "عملة ورقية",
   "File": "ملف",
   "Foreground Color": "لون الواجهة",
   "From account": "من حساب",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "صعوبة هاش",
   "Help": "مساعدة",
   "High": "عالي",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "قد يؤدي استخدام غيرصحيح لهذا البرنامج إلى خسارة دائمة للعملة.",
   "IP address": "عنوان IP",
@@ -212,7 +211,6 @@
   "Label (optional)": "تسمية (اختياري)",
   "Language": "لغة",
   "Last updated\n%{time}": "آخر تحديث%{time}",
-  "License Agreement": null,
   "Light": "ضوء",
   "Loading transaction details...": null,
   "Loading transactions": null,
