--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Automatisches Update (Empfohlen)",
   "Automatically check for new versions and notify if a new version is available.": "Automatisch nach einer neuen Walletversion suchen und mich benachrichtigen.",
   "Avatar Mode": "Avatar Modus",
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "FÜHREN SIE HÄUFIGE BACKUP DURCH UND BEWAHREN SIE DEN VERSCHLÜSSELUNGSCODE SICHER AUF.",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "Hintergrund",
   "Background Color": "Hintergrundfarbe des Panels",
   "Backing up your wallet...": "Wallet wird gesichert...",
@@ -45,6 +45,7 @@
   "Backup directory": "Backup Verzeichnis",
   "Backup wallet": "Sicherung der Wallet erstellen",
   "Balance": "Kontostand",
+  "Base currency": null,
   "Block Count": "Blockhöhe",
   "Block Weight": "Block Faktor",
   "Block hash": "Blockhash",
@@ -169,7 +170,6 @@
   "Export custom theme": "Farbschema exportieren",
   "Fake Test Transactions": "Fake-Test-Transaktionen",
   "Fee": "Gebühr",
-  "Fiat currency": "Fiat Währung",
   "File": "Datei",
   "Foreground Color": "Textfarbe",
   "From account": "Vom Konto",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "Hash Schwierigkeit",
   "Help": "Hilfe",
   "High": "Hoch",
-  "I have read and Accept the Agreement": "Ich habe die Vereinbarung gelesen und akzeptiert",
   "I understand the risk": "Ich verstehe das Risiko",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "FALSCHES VERWENDEN DIESER SOFTWARE KÖNNTE ZUM PERMANENTE VERLIEREN VON MÜNZEN FÜHREREN.",
   "IP address": "IP Adresse",
@@ -212,7 +211,6 @@
   "Label (optional)": null,
   "Language": "Sprache",
   "Last updated\n%{time}": null,
-  "License Agreement": null,
   "Light": null,
   "Loading transaction details...": null,
   "Loading transactions": null,
