--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Auto update (Recommended)",
   "Automatically check for new versions and notify if a new version is available.": "Automatically check for new versions and notify if a new version is available.",
   "Avatar Mode": "Avatar Mode",
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.",
   "Background": "Background",
   "Background Color": "Background Color",
   "Backing up your wallet...": "Backing up your wallet...",
@@ -45,6 +45,7 @@
   "Backup directory": "Backup directory",
   "Backup wallet": "Backup wallet",
   "Balance": "Balance",
+  "Base currency": "Base currency",
   "Block Count": "Block Count",
   "Block Weight": "Block Weight",
   "Block hash": "Block hash",
@@ -169,7 +170,6 @@
   "Export custom theme": "Export custom theme",
   "Fake Test Transactions": "Fake Test Transactions",
   "Fee": "Fee",
-  "Fiat currency": "Fiat currency",
   "File": "File",
   "Foreground Color": "Foreground Color",
   "From account": "From account",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "Hash Difficulty",
   "Help": "Help",
   "High": "High",
-  "I have read and Accept the Agreement": "I have read and Accept the Agreement",
   "I understand the risk": "I understand the risk",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.",
   "IP address": "IP address",
@@ -212,7 +211,6 @@
   "Label (optional)": "Label (optional)",
   "Language": "Language",
   "Last updated\n%{time}": "Last updated\n%{time}",
-  "License Agreement": "License Agreement",
   "Light": "Light",
   "Loading transaction details...": "Loading transaction details...",
   "Loading transactions": "Loading transactions",
