--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": null,
   "Automatically check for new versions and notify if a new version is available.": "Buscar automáticamente nuevas versiones y notificar si hay una nueva versión disponible.",
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": null,
   "Background Color": "Color de fondo",
   "Backing up your wallet...": null,
@@ -45,6 +45,7 @@
   "Backup directory": "Directorio de copia de seguridad",
   "Backup wallet": "Monedero de respaldo",
   "Balance": "Saldo",
+  "Base currency": null,
   "Block Count": null,
   "Block Weight": null,
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": "Exportar tema personalizado",
   "Fake Test Transactions": "Transacciones de prueba falsas",
   "Fee": "Cuota",
-  "Fiat currency": "Moneda Fiat",
   "File": null,
   "Foreground Color": "Color de primer plano",
   "From account": "De la cuenta",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "Dificultad Hash",
   "Help": null,
   "High": "Alto",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "Dirección IP",
@@ -212,7 +211,6 @@
   "Label (optional)": "Label (opcional)",
   "Language": "Idioma",
   "Last updated\n%{time}": null,
-  "License Agreement": null,
   "Light": null,
   "Loading transaction details...": null,
   "Loading transactions": null,
