--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Automatikus frissítés (Ajánlott)",
   "Automatically check for new versions and notify if a new version is available.": "Automatikusan ellenőrizze, van-e új verzió, és értesítse, ha van új verzió.",
   "Avatar Mode": "Avatar Mód",
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "RENDSZERESEN KÉSZÍTS BIZTONSÁGI MÁSOLATOT ÉS ÓVD A TITKOSÍTÁSI KULCSOT.",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "Háttérkép",
   "Background Color": "Háttérszín",
   "Backing up your wallet...": "Pénztárcád biztonsági mentése...",
@@ -45,6 +45,7 @@
   "Backup directory": "Biztonsági mentés mappája",
   "Backup wallet": "Biztonsági másolat a pénztárcáról",
   "Balance": "Egyenleg",
+  "Base currency": null,
   "Block Count": "Blokkok Száma",
   "Block Weight": "Blokk Súly",
   "Block hash": "Blokk hash",
@@ -169,7 +170,6 @@
   "Export custom theme": "Egyedi kinézet exportálása",
   "Fake Test Transactions": "Hamis teszt tranzakciók",
   "Fee": "Díj",
-  "Fiat currency": "Fiat pénznem",
   "File": "Fájl",
   "Foreground Color": "Előtér Szín",
   "From account": "Kezdeményező fiók",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "Hash Nehézség",
   "Help": "Segítség",
   "High": "Magas",
-  "I have read and Accept the Agreement": "Elolvastam és Elfogadom a Megállapodást",
   "I understand the risk": "Megértettem a kockázatokat",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "E SZOFTVER HELYTELEN HASZNÁLATA A COINOK TARTÓS VESZTESÉGÉHEZ VEZETHET.",
   "IP address": "IP cím",
@@ -212,7 +211,6 @@
   "Label (optional)": "Címke (opcionális)",
   "Language": "Nyelv",
   "Last updated\n%{time}": "Utolsó frissítés időpontja\n%{time}",
-  "License Agreement": "Licencmegállapodás",
   "Light": "Világos",
   "Loading transaction details...": "Tranzakció adatainak betöltése...",
   "Loading transactions": "Tranzakciók betöltése",
