--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": null,
   "Automatically check for new versions and notify if a new version is available.": null,
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": null,
   "Background Color": "パネルの背景色",
   "Backing up your wallet...": null,
@@ -45,6 +45,7 @@
   "Backup directory": null,
   "Backup wallet": "バックアップウォレット",
   "Balance": "バランス",
+  "Base currency": null,
   "Block Count": "ブロックカウント",
   "Block Weight": "ブロック重量",
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": null,
   "Fake Test Transactions": null,
   "Fee": "費用",
-  "Fiat currency": "フィアット通貨",
   "File": null,
   "Foreground Color": "テキストの色",
   "From account": "アカウントから",
@@ -183,7 +183,6 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "高い",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IPアドレス",
@@ -212,7 +211,6 @@
   "Label (optional)": null,
   "Language": "言語",
   "Last updated\n%{time}": null,
-  "License Agreement": null,
   "Light": null,
   "Loading transaction details...": null,
   "Loading transactions": null,
