--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": null,
   "Automatically check for new versions and notify if a new version is available.": null,
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": null,
   "Background Color": "패널 배경색",
   "Backing up your wallet...": null,
@@ -45,6 +45,7 @@
   "Backup directory": null,
   "Backup wallet": "백업 월렛",
   "Balance": "균형",
+  "Base currency": null,
   "Block Count": "블록 수",
   "Block Weight": "블록 무게",
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": null,
   "Fake Test Transactions": null,
   "Fee": "보수",
-  "Fiat currency": "피아트 통화",
   "File": null,
   "Foreground Color": "텍스트 색상",
   "From account": "계좌로부터",
@@ -183,7 +183,6 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "높은",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP 주소",
@@ -212,7 +211,6 @@
   "Label (optional)": null,
   "Language": "언어",
   "Last updated\n%{time}": null,
-  "License Agreement": null,
   "Light": null,
   "Loading transaction details...": null,
   "Loading transactions": null,
