--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Auto Update (Aanbevolen)",
   "Automatically check for new versions and notify if a new version is available.": null,
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": null,
   "Background Color": "Paneel Achtergrond Kleur",
   "Backing up your wallet...": null,
@@ -45,6 +45,7 @@
   "Backup directory": null,
   "Backup wallet": "Backup portemonnee",
   "Balance": "Balans",
+  "Base currency": null,
   "Block Count": "Block Totaal",
   "Block Weight": "Block Gewicht",
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": null,
   "Fake Test Transactions": null,
   "Fee": "Honorarium",
-  "Fiat currency": "Fiat Valuta",
   "File": null,
   "Foreground Color": "Tekst Kleur",
   "From account": "Van Account",
@@ -183,7 +183,6 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "Hoog",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP Adres",
@@ -212,7 +211,6 @@
   "Label (optional)": null,
   "Language": "Taal",
   "Last updated\n%{time}": null,
-  "License Agreement": null,
   "Light": null,
   "Loading transaction details...": null,
   "Loading transactions": null,
