--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Automatyczna Aktualizacja (Rekomendowane)",
   "Automatically check for new versions and notify if a new version is available.": "Automatycznie sprawdzaj nową wersje i powiadom mnie jeśli nowa wersja będzie dostępna.",
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "CZĘSTO RÓB BACKUPY I PRZECHOWUJ KLUCZ BEZPIECZNIE.",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "Tło",
   "Background Color": "Kolor Tła",
   "Backing up your wallet...": "Tworzenie kopii portfela...",
@@ -45,6 +45,7 @@
   "Backup directory": "Miejsce na kopie zapasową",
   "Backup wallet": "Kopia zapasowa portfela",
   "Balance": "Stan",
+  "Base currency": null,
   "Block Count": "Numer Bloku",
   "Block Weight": "Waga Bloku",
   "Block hash": "Hash Bloku",
@@ -169,7 +170,6 @@
   "Export custom theme": "Eksportuj motyw niestandardowy",
   "Fake Test Transactions": "Nieprawdziwe transakcje testowe",
   "Fee": "Opłata",
-  "Fiat currency": "Waluta Fiat",
   "File": "Plik",
   "Foreground Color": "Kolor pierwszego planu",
   "From account": "Z konta",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "Trudnosć Hash",
   "Help": "Pomoc",
   "High": "Najwyższa",
-  "I have read and Accept the Agreement": "Przeczytałem i akceptuję warunki umowy",
   "I understand the risk": "Rozumiem ryzyko",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "NIEPRAWIDŁOWE UŻYTKOWANIE TEGO OPROGRAMOWANIA MOŻE DOPROWADZIĆ DO PERMANENTNEJ UTRATY MONET.",
   "IP address": "Adres IP",
@@ -212,7 +211,6 @@
   "Label (optional)": "Opis (opcjonalnie)",
   "Language": "Język",
   "Last updated\n%{time}": "Ostatnio aktualizowano %{time}",
-  "License Agreement": "Umowa licencyjna",
   "Light": "Jasny",
   "Loading transaction details...": "Ładowanie szczegółów transakcji...",
   "Loading transactions": "Ładowanie transakcji",
