--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Atualização automática (recomendado)",
   "Automatically check for new versions and notify if a new version is available.": "Verifica automaticamente novas versões e notifica se uma nova versão está disponível.",
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "Fundo",
   "Background Color": null,
   "Backing up your wallet...": null,
@@ -45,6 +45,7 @@
   "Backup directory": "Diretório de backup",
   "Backup wallet": "Carteira de recuperamento",
   "Balance": "Saldo",
+  "Base currency": null,
   "Block Count": "Contagem de blocos",
   "Block Weight": null,
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": "Exportar tema personalizado",
   "Fake Test Transactions": "Falso Teste de Transações",
   "Fee": "Taxa",
-  "Fiat currency": "Moeda da Fiat",
   "File": null,
   "Foreground Color": null,
   "From account": "Da conta",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "Dificuldade Hash",
   "Help": null,
   "High": "Alto",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "Endereço IP",
@@ -212,7 +211,6 @@
   "Label (optional)": "Label (opcional)",
   "Language": "Idioma",
   "Last updated\n%{time}": null,
-  "License Agreement": null,
   "Light": "Claro",
   "Loading transaction details...": null,
   "Loading transactions": null,
