--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": null,
   "Automatically check for new versions and notify if a new version is available.": null,
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": null,
   "Background Color": "Цвет фона панели",
   "Backing up your wallet...": null,
@@ -45,6 +45,7 @@
   "Backup directory": null,
   "Backup wallet": "Резервное копирование",
   "Balance": "Баланс",
+  "Base currency": null,
   "Block Count": "Количество блоков",
   "Block Weight": "Вес блока",
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": null,
   "Fake Test Transactions": null,
   "Fee": "Плата",
-  "Fiat currency": "Валюта Fiat",
   "File": null,
   "Foreground Color": "Цвет текста",
   "From account": "Со счета",
@@ -183,7 +183,6 @@
   "Hash Difficulty": null,
   "Help": null,
   "High": "Высоко",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": null,
   "IP address": "IP-адрес",
@@ -212,7 +211,6 @@
   "Label (optional)": null,
   "Language": "Язык",
   "Last updated\n%{time}": null,
-  "License Agreement": null,
   "Light": null,
   "Loading transaction details...": null,
   "Loading transactions": null,
