--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "自动更新 (推荐)",
   "Automatically check for new versions and notify if a new version is available.": "自动检查新版本并通知新版本是否可用。",
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "备份并保持加密密钥安全。",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "背景，后台。",
   "Background Color": "背景色",
   "Backing up your wallet...": "正在备份你的钱包...",
@@ -45,6 +45,7 @@
   "Backup directory": "备份目录",
   "Backup wallet": "备份钱包",
   "Balance": "余额",
+  "Base currency": null,
   "Block Count": "块计数",
   "Block Weight": "块重量",
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": "导出自定义主题",
   "Fake Test Transactions": "假测试交易",
   "Fee": "费用",
-  "Fiat currency": "法定货币",
   "File": "文件",
   "Foreground Color": "前景颜色",
   "From account": "从帐户",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "哈希难度",
   "Help": "帮助",
   "High": "高",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "不正确使用本软件可能导致永久性的货币损失。",
   "IP address": "IP 地址",
@@ -212,7 +211,6 @@
   "Label (optional)": "标签（可选）",
   "Language": "语言",
   "Last updated\n%{time}": "最近一次更新的时间 %{time}",
-  "License Agreement": null,
   "Light": "浅",
   "Loading transaction details...": null,
   "Loading transactions": null,
