--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Automaattinen päivitys (Suositeltu)",
   "Automatically check for new versions and notify if a new version is available.": "Automaattisesti tarkistaa onko uusia versioita saatavilla ja ilmoittaa kun on.",
   "Avatar Mode": "Avatar Tila",
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "VARMUUSKOPIOI USEASTI JA PIDÄ SALAUSAVAIMESI TURVASSA.",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "Taustakuva",
   "Background Color": "Taustaväri",
   "Backing up your wallet...": "Varmuuskopioidaan lompakkoa...",
@@ -45,6 +45,7 @@
   "Backup directory": "Varmuuskopiointikansio",
   "Backup wallet": "Varmuuskopioi lompakko",
   "Balance": "Saldo",
+  "Base currency": null,
   "Block Count": "Lohko lukumäärä",
   "Block Weight": "Lohko Paino",
   "Block hash": "Lohkon Hajautus",
@@ -169,7 +170,6 @@
   "Export custom theme": "Vie mukautettu teema",
   "Fake Test Transactions": "Testaa Rahansiirtoja",
   "Fee": "Siirtomaksu",
-  "Fiat currency": "Fiat valuutta",
   "File": "Tiedosto",
   "Foreground Color": "Etualan väri",
   "From account": "Tililtä",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "Tarkisteen Vaikeustaso",
   "Help": "Apua",
   "High": "Korkea",
-  "I have read and Accept the Agreement": "Olen lukenut ja hyväksynyt käyttäjäehdot",
   "I understand the risk": "Ymmärrän riskin",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "TÄMÄN OHJELMISTON SOPIMATON KÄYTTÖ VOI JOHTAA RAHOJESI PYSYVÄÄN KADOTUKSEEN.",
   "IP address": "IP osoite",
@@ -212,7 +211,6 @@
   "Label (optional)": "Nimike (valinnainen)",
   "Language": "Kieli",
   "Last updated\n%{time}": "Viimeksi päivitetty\n%{time}",
-  "License Agreement": "Käyttöoikeussopimus",
   "Light": "Vaalea",
   "Loading transaction details...": "Ladataan rahansiirtojen tietoja...",
   "Loading transactions": "Ladataan rahansiirtoja",
