--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Mise à jour automatique (recommandé)",
   "Automatically check for new versions and notify if a new version is available.": "Vérifier automatiquement l'existence de nouvelles versions et me notifier si une nouvelle version est disponible.",
   "Avatar Mode": null,
-  "BACKUP OFTEN AND KEEP ENCRYPTION KEY SAFE.": "EFFECTUEZ DES SAUVEGARDES RÉGULIÈRES ET GARDEZ VOTRE CLÉ DE CHIFFREMENT EN LIEU SÛR.",
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "Arrière-plan",
   "Background Color": "Couleur d'arrière plan",
   "Backing up your wallet...": "Sauvegarde de votre portefeuille...",
@@ -45,6 +45,7 @@
   "Backup directory": "Répertoire de sauvegarde",
   "Backup wallet": "Sauvegarder le portefeuille",
   "Balance": "Solde",
+  "Base currency": null,
   "Block Count": "Nombre de blocs",
   "Block Weight": "Block Weight",
   "Block hash": null,
@@ -169,7 +170,6 @@
   "Export custom theme": "Exporter thème personnalisé",
   "Fake Test Transactions": "Fausses transactions de test",
   "Fee": "Frais",
-  "Fiat currency": "Monnaies fiduciaires",
   "File": "Fichier",
   "Foreground Color": "Couleur du texte",
   "From account": "Depuis le compte",
@@ -183,7 +183,6 @@
   "Hash Difficulty": "Difficulté Hash",
   "Help": "Aide",
   "High": "Haut",
-  "I have read and Accept the Agreement": null,
   "I understand the risk": null,
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "UNE UTILISATION INAPPROPRIÉE DE CE LOGICIEL PEUT PROVOQUER LA PERTE IRRÉVERSIBLE DE VOS FONDS.",
   "IP address": "Adresse IP",
@@ -212,7 +211,6 @@
   "Label (optional)": "Étiquette (optionnel)",
   "Language": "Langue",
   "Last updated\n%{time}": "Dernière mise à jour\n%{time}",
-  "License Agreement": null,
   "Light": "Clair",
   "Loading transaction details...": null,
   "Loading transactions": null,
